exercises/log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-output-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: get-output
  template:
    metadata:
      labels:
        app: get-output
    spec:
      containers:
        - name: get-output
          image: nomadxynta/get_output:12.0
          volumeMounts:
            - name: textfile-volume 
              mountPath: /app/data
      volumes:
        - name: textfile-volume
          configMap:
            name: exercises-config
            items:
              - key: textfile
                path: text_file.txt
